@@ -91,16 +91,20 @@
 
     </bean>
 
-
-
     <bean id="geneManager" class="edu.mcw.rgd.gff3.CreateGff4Gene">
+        <property name="outDir" value="Gene Models/RGD Gene Features"/>
+        <property name="processedMapKeys">
+            <list>
+                <value>372</value>  <!-- rn7 -->
+            </list>
+        </property>
+        <!--
         <property name="processedAssemblies">
             <list>
-                <value>species:RAT    mapKey:372 toDir:data/jbrowse2/Rat/Gene Models/RGD Gene Features   compress:bgzip</value>
-<!--
                 <value>species:RAT    mapKey:60  toDir:data/Gene/Rat/   compress:bgzip</value>
                 <value>species:RAT    mapKey:70  toDir:data/Gene/Rat/   compress:bgzip</value>
                 <value>species:RAT    mapKey:360 toDir:data/Gene/Rat/   compress:bgzip</value>
+                <value>species:RAT    mapKey:372 toDir:data/Gene/Rat/   compress:bgzip</value>
                 <value>species:HUMAN  mapKey:13  toDir:data/Gene/Human/ compress:bgzip</value>
                 <value>species:HUMAN  mapKey:17  toDir:data/Gene/Human/ compress:bgzip</value>
                 <value>species:HUMAN  mapKey:38  toDir:data/Gene/Human/ compress:bgzip</value>
@@ -119,9 +123,9 @@
                 <value>species:SQUIRREL   mapKey:720  toDir:data/Gene/Squirrel/   compress:bgzip</value>
                 <value>species:VERVET     mapKey:1311 toDir:data/Gene/Vervet/     compress:bgzip</value>
                 <value>species:VERVET     mapKey:1313 toDir:data/Gene/Vervet/     compress:bgzip</value>
-                -->
             </list>
         </property>
+        -->
     </bean>
 
     <bean id="qtlManager" class="edu.mcw.rgd.gff3.CreateGff4QTL">
